Update library versions and remove unnecessary artifacts