@@ -25,19 +25,19 @@ import net.javacrumbs.jsonunit.JsonAssert;
 import net.minidev.json.JSONArray;
 import net.minidev.json.JSONObject;
 import net.minidev.json.parser.ParseException;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Parameters;
 import org.testng.annotations.Test;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.Iterator;
 
 import static io.restassured.RestAssured.*;
+import java.io.FileInputStream;
+
 
 public class OPVerifierIntegrationTests extends IntegrationTests {
 	private String testsFile;
@@ -120,7 +120,7 @@ public class OPVerifierIntegrationTests extends IntegrationTests {
 			dataProvider = "getOPTestConfigs"
 	)
 	public void testTestStep(String testname, String filename, String expectedResult) throws IOException {
-		String expectedJSON = FileUtils.readFileToString(new File(filename), "utf-8");
+		String expectedJSON = new String(new FileInputStream(filename).readAllBytes(), "utf-8");
 
 		Pair<String, JSONArray> outcome = runTestForLogentry(testname);
 
